infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 381492301125.dkr.ecr.ap-southeast-1.amazonaws.com/auth:1.0.0
          volumeMounts:
            - name: aws-credentials-vl
              mountPath: /root/.aws/credentials
              subPath: credentials
              readOnly: true        
      volumes:
        - name: aws-credentials-vl
          secret:
            secretName: aws-secret
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
