infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 381492301125.dkr.ecr.ap-southeast-1.amazonaws.com/client:6.0.0
          volumeMounts:
            - name: aws-credentials-vl
              mountPath: /root/.aws/credentials
              subPath: credentials
              readOnly: true
      volumes:
        - name: aws-credentials-vl
          secret:
            secretName: aws-secret
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
